# LearnSDL3

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  LearnSDL3.cpp  LearnSDL3.h
src/1_getting_started/1.1_creating_a_window/: Program.cpp
src/1_getting_started/2.1_hello_window/: Program.cpp
src/1_getting_started/3.1_hello_triangle/: Program.cpp
src/1_getting_started/3.1_hello_triangle/shaders/: fragment_shader.glsl
src/1_getting_started/3.2_hello_triangle_quad/: Program.cpp
src/1_getting_started/3.3_hello_triangle_excercise_1/: Program.cpp
src/1_getting_started/3.3_hello_triangle_excercise_1.2/: Program.cpp
src/1_getting_started/3.4_hello_triangle_excercise_2/: Program.cpp
src/1_getting_started/3.5_hello_triangle_excercise_3/: Program.cpp
src/1_getting_started/3.5_hello_triangle_excercise_3/shaders/: fragment_shader2.glsl
src/1_getting_started/4.1_shaders/: Program.cpp
src/1_getting_started/4.1_shaders/shaders/: fragment_shader.glsl
src/1_getting_started/4.2_shaders_more_attributes/: Program.cpp
src/1_getting_started/4.3_shaders_abstractions/: Program.cpp
src/1_getting_started/4.3_shaders_abstractions/shaders/: vertex_shader.glsl
src/1_getting_started/4.4_shaders_excercise_1/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/1_getting_started/4.5_shaders_excercise_2/: Program.cpp
src/1_getting_started/4.5_shaders_excercise_2/shaders/: vertex_shader.glsl
src/1_getting_started/4.6_shaders_excercise_3/: Program.cpp
src/1_getting_started/4.6_shaders_excercise_3/shaders/: vertex_shader.glsl
src/1_getting_started/5.1_textures/: Program.cpp
src/1_getting_started/5.1_textures/shaders/: fragment_shader.glsl
src/1_getting_started/5.3_textures_excercise_1/: Program.cpp
src/1_getting_started/5.3_textures_excercise_1/shaders/: fragment_shader.glsl
src/1_getting_started/5.4_textures_excercise_2/: Program.cpp
src/1_getting_started/5.4_textures_excercise_2/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/1_getting_started/5.5_textures_excercise_3/: Program.cpp
src/1_getting_started/5.6_textures_excercise_4/: Program.cpp
src/1_getting_started/5.6_textures_excercise_4/shaders/: fragment_shader.glsl
src/1_getting_started/6.1_transformations/: Program.cpp
src/1_getting_started/6.2_transformations_animated/: Program.cpp
src/1_getting_started/6.2_transformations_animated/shaders/: vertex_shader.glsl
src/1_getting_started/6.3_transformations_excercise_1/: Program.cpp
src/1_getting_started/6.4_transformations_excercise_2/: Program.cpp
src/1_getting_started/6.4_transformations_excercise_2/shaders/: fragment_shader.glsl
src/1_getting_started/7.1_coordinate_systems/: Program.cpp
src/1_getting_started/7.1_coordinate_systems/shaders/: vertex_shader.glsl
src/1_getting_started/7.2_coordinate_systems_more_3d/: Program.cpp
src/1_getting_started/7.2_coordinate_systems_more_3d/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/1_getting_started/7.3_coordinate_systems_more_cubes/: Program.cpp
src/1_getting_started/7.4_coordinate_systems_excercise_1/: Program.cpp
src/1_getting_started/7.5_coordinate_systems_excercise_2/: Program.cpp
src/1_getting_started/7.6_coordinate_systems_excercise_3/: Program.cpp
src/1_getting_started/8.1_camera/: Program.cpp
src/1_getting_started/8.1_camera_walk_around/: Program.cpp
src/1_getting_started/9.1_text_rendering/: Program.cpp
src/1_getting_started/9.1_text_rendering/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/Common/: misc.cpp  misc.h
src/shaders/: fragment.glsl  vertex.glsl  vertex.spv
